clear some unecessary skills

--- a/index.html
+++ b/index.html
@@ -120,7 +120,6 @@
         <div class="carousel-container">
             <div class="carousel-track">
                 <div class="card"><i class="devicon-javascript-plain colored"></i> JavaScript</div>
-                <div class="card"><i class="devicon-python-plain colored"></i>Python</div>
                 <div class="card"><i class="devicon-java-plain colored"></i> Java</div>
                 <div class="card"><i class="devicon-cplusplus-plain colored"></i>C#</div>
                 <div class="card"><i class="devicon-html5-plain colored"></i>HTML</div>
@@ -131,7 +130,6 @@
 
                 <!-- Duplicates for seamless looping -->
                 <div class="card"><i class="devicon-javascript-plain colored"></i> JavaScript</div>
-                <div class="card"><i class="devicon-python-plain colored"></i>Python</div>
                 <div class="card"><i class="devicon-java-plain colored"></i> Java</div>
                 <div class="card"><i class="devicon-cplusplus-plain colored"></i>C#</div>
                 <div class="card"><i class="devicon-html5-plain colored"></i>HTML</div>
@@ -150,9 +148,7 @@
                 <div class="card"><i class="devicon-sonarqube-original colored"></i> SonarQube</div>
                 <div class="card"><i class="devicon-mysql-plain colored"></i>MySQL</div>
                 <div class="card"><i class="devicon-microsoftsqlserver-plain colored"></i>SQL Server</div>
-                <div class="card"><i class="devicon-postgresql-plain colored"></i>PostgreSQL</div>
                 <div class="card"><i class="devicon-postman-plain colored"></i>Postman</div>
-                <div class="card"><i class="devicon-firebase-plain colored"></i>Firebase</div>
                 <div class="card"><i class="devicon-godot-plain colored"></i> Godot</div>
                 <div class="card"><i class="devicon-renpy-plain colored"></i>RenPy</div>
 
@@ -162,9 +158,7 @@
                 <div class="card"><i class="devicon-sonarqube-original colored"></i> SonarQube</div>
                 <div class="card"><i class="devicon-mysql-plain colored"></i>MySQL</div>
                 <div class="card"><i class="devicon-microsoftsqlserver-plain colored"></i>SQL Server</div>
-                <div class="card"><i class="devicon-postgresql-plain colored"></i>PostgreSQL</div>
                 <div class="card"><i class="devicon-postman-plain colored"></i>Postman</div>
-                <div class="card"><i class="devicon-firebase-plain colored"></i>Firebase</div>
                 <div class="card"><i class="devicon-godot-plain colored"></i> Godot</div>
                 <div class="card"><i class="devicon-renpy-plain colored"></i>RenPy</div>
             </div>
@@ -193,7 +187,7 @@
                         During my internship as a <strong>Game Developer at GoCrayons Digital Inc.</strong>, I got to bring ideas to life using <strong>Godot Engine and GDScript</strong>. Designing game mechanics and working in an agile team showed me how collaboration and iteration lead to better solutions—lessons I carry into every project.
                     </p>
                     <p>
-                        I'm drawn to projects that challenge me to think differently, whether that's architecting a database, crafting an intuitive UI, or debugging tricky logic. My toolkit includes <strong>Java, Python, C#, PHP, React, and MySQL</strong>, but I'm always eager to learn whatever the project demands.
+                        I'm drawn to projects that challenge me to think differently, whether that's architecting a database, crafting an intuitive UI, or debugging tricky logic. My toolkit includes <strong>Springboot, C#, PHP, React, and MySQL</strong>, but I'm always eager to learn whatever the project demands.
                     </p>
                     <p>
                         Currently, I'm sharpening my skills in <strong>Java backend development and React frontend development</strong> through an <strong>Accenture training bootcamp</strong>—diving deep into enterprise-level architecture and modern web development practices. I'm looking for opportunities where I can apply this growing expertise and continue building solutions that make a real impact.
