--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="description" content="A website portfolio of Ian Christopher Tandog">
-    <meta name="keywords" content="Web Developer, Web Designer, Game Developer, Software Engineer, Java Developer, Springboot Developer, Accenture Trainee, STI College Graduate, BSIT">
+    <meta name="keywords" content="Web Developer, Web Designer, Game Developer, Software Engineer, Java Backend Developer, Spring Boot Developer,REST API,  Accenture Trainee, STI College Graduate, BSIT">
     <meta name="author" content="Ian Christopher Tandog">
 
     <meta property="og:title" content="Website Portfolio">
@@ -76,10 +76,11 @@
                 <h1>
                     Ian Christopher Tandog
                 </h1>
-                <h2><span class="hero-highlight">Full Stack Software Developer | Web & Game Development</span></h2>
+                <h2><span class="hero-highlight"> Junior Java backend developer | Spring Boot | React + TypeScript</span></h2>
                 
                 <p class="hero-subtitle">
-                    BSIT graduate and aspiring software engineer with hands-on experience in <strong>full-stack web development</strong> and <strong>game development</strong>. Passionate about building scalable, user-friendly applications and continuously learning modern technologies.
+                    BSIT graduate and junior Java backend developer focused on building RESTful APIs with Spring Boot, and modern UIs using React + TypeScript. Passionate about scalable, user-friendly systems and continuously improving through hands-on projects and learning. Experienced in <strong>full-stack development
+                    </strong> and <strong>game development</strong>. Passionate about building scalable, user-friendly applications and continuously learning modern technologies.
                 </p>
 
                 <div class="hero-actions">
@@ -179,16 +180,16 @@
             <div class="about-content-stats">
                 <div class="about-text">
                     <p>
-                        As a fresh <strong>BSIT graduate from STI College Dasmariñas</strong>, I've discovered that the best code doesn't just work—it solves real problems. My thesis project, a <strong>full-stack salon appointment system</strong> with an AI-powered customer assistant (Chatbase API), taught me that building software is about understanding people as much as it is about understanding technology.
+                        As a BSIT graduate from STI College Dasmariñas, I focus on designing systems that solve real-world problems. My thesis project—a full-stack salon appointment system with an AI-powered customer assistant (Chatbase API)—strengthened my understanding of backend logic, data management, and user-centric application design.
                     </p>
                     <p>
-                        During my internship as a <strong>Game Developer at GoCrayons Digital Inc.</strong>, I got to bring ideas to life using <strong>Godot Engine and GDScript</strong>. Designing game mechanics and working in an agile team showed me how collaboration and iteration lead to better solutions—lessons I carry into every project.
+                        During my internship as a Game Developer at GoCrayons Digital Inc., I gained hands-on experience working in an Agile team environment, implementing modular logic, collaborating through code reviews, and translating requirements into working software—skills that transfer directly to backend development.
                     </p>
                     <p>
-                        I'm drawn to projects that challenge me to think differently, whether that's architecting a database, crafting an intuitive UI, or debugging tricky logic. My toolkit includes <strong>Springboot, C#, PHP, React, and MySQL</strong>, but I'm always eager to learn whatever the project demands.
+                        I’m particularly interested in Java backend development, RESTful API design, and database-driven applications. My current toolkit includes Java, Spring Boot, REST APIs, MySQL, React, TypeScript, PHP, and C#, and I continuously expand my skills through hands-on projects.
                     </p>
                     <p>
-                        Currently, I'm sharpening my skills in <strong>Java backend development and React frontend development</strong> through an <strong>Accenture training bootcamp</strong>—diving deep into enterprise-level architecture and modern web development practices. I'm looking for opportunities where I can apply this growing expertise and continue building solutions that make a real impact.
+                        Recently, I completed the Accenture Tech AmplifAI Program (Sep 2025 – Jan 2026), where I trained in Java backend development, Spring Framework, REST API design, and modern React practices. I’m now seeking a Junior Java Backend / Spring Boot role where I can contribute, learn, and grow as a software engineer.
                     </p>
                 </div>
 
@@ -202,8 +203,8 @@
                         <p>Technologies</p>
                     </div>
                     <div class="stat-card">
-                        <h3>Active</h3>
-                        <p>Accenture Trainee</p>
+                        <h3>Completed</h3>
+                        <p>Accenture Program</p>
                     </div>
                     <div class="stat-card">
                         <h3>Full-Stack</h3>
@@ -354,7 +355,7 @@
                 <div class="timeline-item">
                     <div class="timeline-marker"></div>
                     <div class="timeline-content">
-                        <div class="timeline-date">September 2025 - Present</div>
+                        <div class="timeline-date">Accenture Tech AmplifAI Program - Completed</div>
                         <h3 class="timeline-title">Training Bootcamp</h3>
                         <div class="timeline-company">Accenture</div>
                         <p class="timeline-description">
@@ -365,7 +366,7 @@
                 <div class="timeline-item">
                     <div class="timeline-marker"></div>
                     <div class="timeline-content">
-                        <div class="timeline-date">September 2021 - July 2025</div>
+                        <div class="timeline-date">Sep 2021 - Jan 2025</div>
                         <div class="timeline-title">Bachelor of Science in Information Technology</div>
                         <div class="timeline-company">STI College Dasmariñas</div>
                         <p class="timeline-description">Completed comprehensive IT curriculum with focus on full-stack development. Developed strong foundation in programming, databases, and software engineering principles through academic projects and collaborative team assignments.</p>
