about section ui fixed, seo improved

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" type='text/css' href="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/devicon.min.css" />
+    <meta name="google-site-verification" content="googled02dbed6bee68c60.html">
     <script type="text/javascript"
         src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js">
     </script>
@@ -79,8 +80,10 @@
                 <h2><span class="hero-highlight"> Junior Java backend developer | Spring Boot | React + TypeScript</span></h2>
                 
                 <p class="hero-subtitle">
-                    BSIT graduate and junior Java backend developer focused on building RESTful APIs with Spring Boot, and modern UIs using React + TypeScript. Passionate about scalable, user-friendly systems and continuously improving through hands-on projects and learning. Experienced in <strong>full-stack development
-                    </strong> and <strong>game development</strong>. Passionate about building scalable, user-friendly applications and continuously learning modern technologies.
+                BSIT graduate and junior Java backend developer focused on building RESTful APIs with Spring Boot, and modern UIs using React + TypeScript.
+                <span class="hero-more">
+                    Passionate about scalable, user-friendly systems and continuously improving through hands-on projects and learning.
+                </span>
                 </p>
 
                 <div class="hero-actions">
@@ -400,8 +403,8 @@
                 <div class="timeline-item">
                     <div class="timeline-marker"></div>
                     <div class="timeline-content">
-                        <div class="timeline-date">Accenture Tech AmplifAI Program - Completed</div>
-                        <h3 class="timeline-title">Training Bootcamp</h3>
+                        <div class="timeline-date">Sep 2025 – Jan 2026</div>
+                        <h3 class="timeline-title">Accenture Tech AmplifAI Program - Training Bootcamp</h3>
                         <div class="timeline-company">Accenture</div>
                         <p class="timeline-description">
                             Intensive training program focused on Java backend development and React frontend development. Learning enterprise-level architecture patterns, RESTful API design, Spring Framework, and modern React practices for building scalable, production-ready applications.
@@ -560,7 +563,7 @@
         </div>
     </footer>
 
-    <script src="script.js"></script>
+    <script src="script.js" defer></script>
 
 </body>
 </html>
